web/infrastructure/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gopints-web
  namespace: gopints
spec:
  selector:
    app: gopints-web
  ports:
    - port: 80
      targetPort: 80
