web/infrastructure/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gopints-web
  namespace: gopints
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: gopints-web.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gopints-web
                port:
                  number: 80
  tls:
    - hosts:
        - gopints-web.local
